Changed Dockerfile to enable running as a random uid on Open shift

--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -4,6 +4,9 @@ FROM quay.io/redhattraining/httpd-parent
 # Change the port to 8080
 EXPOSE 8080
 
+#io.openshift.expose-service
+LABEL io.openshift.expose-services="8080:http"
+
 # Labels consumed by OpenShift
 LABEL io.k8s.description="A basic Apache HTTP Server child image, uses ONBUILD" \
       io.k8s.display-name="Apache HTTP Server" \
