--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -1,11 +1,8 @@
-# Use the httpd-parent image as base
+# Use the redhattraining/httpd-parent image as base
 FROM quay.io/redhattraining/httpd-parent
 
 # Change the port to 8080
 EXPOSE 8080
-
-#io.openshift.expose-service
-LABEL io.openshift.expose-services="8080:http"
 
 # Labels consumed by OpenShift
 LABEL io.k8s.description="A basic Apache HTTP Server child image, uses ONBUILD" \
